# rate-guard-core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: error.rs  lib.rs  rate_limit.rs  rate_limiter_core.rs  types.rs
src/cores/: approximate_sliding_window_core.rs  fixed_window_counter_core.rs  leaky_bucket_core.rs  mod.rs  sliding_window_counter_core.rs  token_bucket_core.rs
src/rate_limiters/: approximate_sliding_window_core.rs  fixed_window_counter_core.rs  leaky_bucket_core.rs  mod.rs  sliding_window_counter_core.rs  token_bucket_core.rs
tests/: approximate_sliding_window_core.rs  approximate_sliding_window_core2.rs  approximate_sliding_window_core3.rs  approximate_sliding_window_core4.rs  fixed_window_counter_core.rs  fixed_window_counter_core2.rs  fixed_window_counter_core3.rs  fixed_window_counter_core4.rs  leaky_bucket_core.rs  leaky_bucket_core2.rs  leaky_bucket_core3.rs  leaky_bucket_core4.rs  sliding_window_counter_core.rs  sliding_window_counter_core2.rs  sliding_window_counter_core3.rs  sliding_window_counter_core4.rs  token_bucket_core.rs  token_bucket_core2.rs  token_bucket_core3.rs  token_bucket_core4.rs
