[package]
name = "rate-guard-core"
version = "0.2.1"
edition = "2021"
authors = ["KuanLinChen <kuan.lyn.chen@gmail.com>"]
description = "Rate limiting library with multiple thread-safe algorithms"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kuanlin/rate-guard-core"
documentation = "https://docs.rs/rate-guard-core"
homepage = "https://github.com/kuanlin/rate-guard-core"
readme = "README.md"
keywords = ["rate-limiting", "concurrency", "algorithms", "throttling", "rate-guard"]
categories = [
    "algorithms", 
    "concurrency", 
    "network-programming",
]
rust-version = "1.60"

[dependencies]

[dev-dependencies]

[features]
default = ["tick_u64"] 
tick_u64 = []
tick_u128 = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]